--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,31 @@
+@font-face {
+    font-family: 'geniusthin';
+    src: url('../fonts/genius-100-thin-webfont.eot');
+    src: url('../fonts/genius-100-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/genius-100-thin-webfont.woff') format('woff'),
+         url('../fonts/genius-100-thin-webfont.ttf') format('truetype'),
+         url('../fonts/genius-100-thin-webfont.svg#geniusthin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 body{
 	background-color: 
+}
+
+button{
+	border: 0;
+	outline: 0;
+	background: none;
+}
+
+h1{
+	font-family: 'geniusthin';
+	font-size: 1em;
+	color: #fff;
+	text-align: center;
 }
 
 #main-screen{
@@ -10,6 +36,7 @@ body{
 
 #door-locked-screen{
 	position: fixed;
+	background-color: #69c9c7;
 }
 
 .hidden{
@@ -23,8 +50,8 @@ body{
 	color: #d6566b;
 }
 
-button{
-	border: 0;
-	outline: 0;
-	background: none;
+.icon-lock-close{
+	font-size: 18em;
+	color: #4ca5a0;
 }
+
