--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,27 @@ h1{
 	font-size: 1.6em;
 	color: #fff;
 	text-align: center;
+	letter-spacing: 0.1em;
+	padding-bottom: 8%;
 }
 
 p{
 	text-align: center;
+	-webkit-animation: fadein 3s; /* Safari and Chrome */
+       -moz-animation: fadein 3s; /* Firefox */
 }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 
 #main-screen{
 	margin-top: 0px;
@@ -66,4 +82,8 @@ p{
 	color: #4ca5a0;
 }
 
+.title-space{
+	width: 100%;
+	height: 15%;
+}
 
