--- a/css/style.css
+++ b/css/style.css
@@ -73,17 +73,24 @@ p{
 /* Design icone cadeados*/
 
 .icon-lock-open{
-	font-size: 18em;
+	font-size: 31em;
 	color: #d6566b;
 }
 
 .icon-lock-close{
-	font-size: 18em;
+	font-size: 31em;
 	color: #4ca5a0;
 }
 
 .title-space{
 	width: 100%;
-	height: 15%;
+	height: 18%;
+}
+
+.time-ago-style{
+	color: #fff;
+	font-family: georgia, serif;
+	font-size: 0.9em;
+	font-style: italic;
 }
 
