--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,6 @@ p{
 	font-style: italic;
 }
 
+html, body, form, fieldset, p, div, h1, h2, h3, h4, h5, h6, i {
+    -webkit-text-size-adjust:none;
+}
